# avelang

./: .gitignore
.github/runner/: .dockerignore  Dockerfile.avelang-ci  Dockerfile.runner  README.md  ci.sh  compose.yml  entrypoint.sh  run-ci-container.sh  setup.sh
.github/workflows/: mi300-ci.yml
benchmark/gemm/: bench_amdgpu_gemm.py
docs/content/language-reference/: hardware-intrinsics.md
docs/content/tutorials/: 03-intrinsics.md
lib/Dialect/AveLang/IR/: AveLangOps.cc  AveLangOps.h  AveLangOps.td
lib/Dialect/AveLang/Transforms/: CMakeLists.txt  lower_ave_lang_to_memref_pass.cc  lower_gpuop_to_intrinsics_pass.cc
lib/Frontend/: avelang_parser_expr.cc
lib/IR/: CMakeLists.txt  builtin_module.cc  builtin_module.h  constant_folder.cc  expr_generator.cc  function_generator.cc  ir_context.cc  layout_operation.cc  layout_operation.h  mangler.cc  mangler.h  mlir_generator.cc  mlir_generator.h  mlir_generator_impl.h  mlir_generator_test.cc
lib/IR/Intrinsics/: amdgpu_intrinsics.mlir  amdgpu_module.cc  nvvm_module.cc
python/: CMakeLists.txt
python/avelang/: knobs.py
python/avelang/backends/amdgpu/: driver.py
python/avelang/backends/nvidia/: driver.py
python/avelang/compiler/: cache.py  code_generator.py  compiler.py
python/avelang/language/: __init__.py  amdgpu.py  core.py  nvvm.py
python/avelang/runtime/: build.py  jit.py
python/avelang_kernels/: amdgpu_gemm.py  flash_attn.py
python/src/: avelang_bindings.cc
test/examples/attention/amdgpu/: test_flash_attn_amdgpu.py
test/examples/gemm/amdgpu/: test_amdgpu_gemm.py
test/primitives/jit/: test_amdgpu_packed_f8_conversion.py  test_compiler_cache.py  test_constexpr.py  test_constexpr_helper_specialization.py  test_constexpr_jit_function.py  test_global_constexpr.py
test/primitives/layout/: test_layout_algebra.py
test/primitives/memory/: test_amdgpu_buffer_ops.py  test_nvvm_tma_ops.py  test_nvvm_wgmma_ops.py
tools/: dump_assembly.py  dump_llvm_ir.py
